[package]
name = "melodium-share"
version = "0.9.1"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium language parsing and semantic analyser"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
name = "melodium_share"

[features]
webassembly = ["tsify", "wasm-bindgen"]

[dependencies]
melodium-common = { path = "../melodium-common", version = "0.9.1" }
melodium-engine = { path = "../melodium-engine", version = "0.9.1" }
cbor4ii = { version = "0.3.3", features = ["serde1"] }
erased-serde = "0.4"
itertools = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
tsify = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2.95", optional = true }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "aarch64-unknown-linux-gnu",
    "aarch64-unknown-linux-musl",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "riscv64gc-unknown-linux-gnu",
    "s390x-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "aarch64-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "wasm32-unknown-unknown"
]
