[package]
name = "melodium"
version = "0.7.1"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.60"
edition = "2018"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Dataflow-oriented language & tool, focusing on treatments applied on data, allowing high scalability and massive parallelization safely"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "melodium"

[[bin]]
name = "melodium"
required-features = ["cli"]

[dependencies]
clap = { version = "4.0.32", features = ["cargo", "derive"], optional = true }
colored = { version = "2.0.2", optional = true }
melodium-common = { path = "../melodium-common", version = "0.7.1" }
melodium-core = { path = "../melodium-core", version = "0.7.1", optional = true  }
melodium-engine = { path = "../melodium-engine", version = "0.7.1" }
melodium-loader = { path = "../melodium-loader", version = "0.7.1" }
melodium-doc = { path = "../melodium-doc", version = "0.7.1", optional = true }

std-mel = { path = "../libs/std-mel", version = "0.7.1" }

encoding-mel = { path = "../libs/encoding-mel", version = "0.7.1", optional = true }
fs-mel = { path = "../libs/fs-mel", version = "0.7.1", optional = true }
http-mel = { path = "../libs/http-mel", version = "0.7.1", optional = true }
javascript-mel = { path = "../libs/javascript-mel", version = "0.7.1", optional = true }
json-mel = { path = "../libs/json-mel", version = "0.7.1", optional = true }
regex-mel = { path = "../libs/regex-mel", version = "0.7.1", optional = true }

[features]
default = ["cli", "standard-edition"]
cli = ["clap", "colored"]
jeu = ["melodium-loader/jeu"]
doc = ["melodium-doc", "melodium-engine/doc", "melodium-core/doc"]
network = ["http-mel", "melodium-loader/network"]
fs = ["fs-mel", "melodium-loader/filesystem"]
text = ["encoding-mel", "regex-mel"]
javascript = ["javascript-mel", "json-mel"]
standard-edition = ["jeu", "doc", "fs", "network", "text", "javascript"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.deb]
section = "devel"
priority = "optional"
