[package]
name = "audio-mel"
version = "0.9.0"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium audio processing library"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
crate-type = ["lib", "cdylib"]
name = "audio_mel"

[dependencies]
async-std = "1.13"
async-channel = "2"
async_channel_io = "0.3"
futures = "0.3.28"
melodium-core = { path = "../../melodium-core", version = "0.9.0" }
melodium-macro = { path = "../../melodium-macro", version = "0.9.0" }
std-mel = { path = "../std-mel", version = "0.9.0" }
serde = "1.0.185"
serde_json = "1.0.105"
symphonia = { git = "https://github.com/itytophile/Symphonia.git", branch = "full-async" }

[features]
mock = []
plugin = []
real = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

