[package]
name = "distant-mel"
version = "0.8.0"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.60"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium distant work library"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
crate-type = ["lib", "cdylib"]
name = "distant_mel"

[dependencies]
melodium-core = { path = "../../melodium-core", version = "0.8.0" }
melodium-macro = { path = "../../melodium-macro", version = "0.8.0" }
net-mel = { path = "../net-mel", version = "0.8.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.5.0", features = ["serde", "v4", "fast-rng"] }
trillium-async-std = "0.3"
trillium-client = "0.5"

[features]
mock = []
plugin = []
real = []

[target.'cfg(all(not(target_os = "windows"), not(target_vendor = "apple")))'.dependencies.trillium-rustls]
version = "0.6"
default-features = false
features = ["native-roots", "ring", "client"]

[target.'cfg(all(target_os = "windows", target_env = "gnu"))'.dependencies.trillium-rustls]
version = "0.6"
default-features = false
features = ["ring", "client"]

[target.'cfg(any(target_env = "msvc", target_vendor = "apple"))'.dependencies.trillium-native-tls]
version = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
