[package]
name = "distrib-mel"
version = "0.9.0-pre.1"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium distribution library"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
crate-type = ["lib", "cdylib"]
name = "distrib_mel"

[dependencies]
futures = "0.3.28"
melodium-certs = { path = "../../melodium-certs", version = "=0.9.0-pre.1" }
melodium-core = { path = "../../melodium-core", version = "=0.9.0-pre.1" }
melodium-macro = { path = "../../melodium-macro", version = "=0.9.0-pre.1" }
melodium-share = { path = "../../melodium-share", version = "=0.9.0-pre.1" }
melodium-distribution = { path = "../../melodium-distribution", version = "=0.9.0-pre.1" }
std-mel = { path = "../std-mel", version = "=0.9.0-pre.1" }
work-mel = { path = "../work-mel", version = "=0.9.0-pre.1" }
async-std = {version="1.13", features=["unstable"]}

[features]
mock = []
plugin = []
real = []

[target.'cfg(any(all(not(target_os = "windows"), not(target_vendor = "apple")), all(target_os = "windows", target_env = "gnu")))'.dependencies.futures-rustls]
version = "0.26"
default-features = false
features = ["ring"]

[target.'cfg(any(all(not(target_os = "windows"), not(target_vendor = "apple")), all(target_os = "windows", target_env = "gnu")))'.dependencies.rustls-pemfile]
version = "^2"

[target.'cfg(any(target_env = "msvc", target_vendor = "apple"))'.dependencies.async-native-tls]
version = "0.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
