[package]
name = "distrib-mel"
version = "0.9.1"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium distribution library"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
crate-type = ["lib", "cdylib"]
name = "distrib_mel"

[dependencies]
futures = "0.3.28"
melodium-certs = { path = "../../melodium-certs", version = "0.9.1" }
melodium-core = { path = "../../melodium-core", version = "0.9.1" }
melodium-macro = { path = "../../melodium-macro", version = "0.9.1" }
melodium-share = { path = "../../melodium-share", version = "0.9.1" }
melodium-distribution = { path = "../../melodium-distribution", version = "0.9.1", optional = true }
std-mel = { path = "../std-mel", version = "0.9.1" }
work-mel = { path = "../work-mel", version = "0.9.1" }
async-std = {version="1.13", features=["unstable"]}
futures-rustls = { version = "0.26", default-features = false, features = ["ring"], optional = true}
rustls-pemfile = "^2"

[features]
mock = []
plugin = []
real = ["futures-rustls", "melodium-distribution"]

[package.metadata.docs.rs]
features = ["mock"]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "aarch64-unknown-linux-gnu",
    "aarch64-unknown-linux-musl",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "i686-unknown-linux-gnu",
    "i686-unknown-linux-musl",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "aarch54-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-gnu",
    "i686-pc-windows-msvc",
    "wasm32-unknown-unknown"
]

