[package]
name = "encoding-mel"
version = "0.9.0-pre.4"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium text encode/decode library"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
crate-type = ["lib", "cdylib"]
name = "encoding_mel"

[dependencies]
melodium-core = { path = "../../melodium-core", version = "=0.9.0-pre.4" }
melodium-macro = { path = "../../melodium-macro", version = "=0.9.0-pre.4" }
encoding_rs = "0.8"

[features]
mock = []
plugin = []
real = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
