[package]
name = "fs-mel"
version = "0.9.0-pre.1"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium core filesystem interaction library"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
crate-type = ["lib", "cdylib"]
name = "fs_mel"

[dependencies]
async-std = "1.12"
async-trait = "0.1.71"
async-walkdir = "2.0"
futures = "0.3.28"
melodium-core = { path = "../../melodium-core", version = "=0.9.0-pre.1" }
melodium-macro = { path = "../../melodium-macro", version = "=0.9.0-pre.1" }
serde = "1.0.185"
std-mel = { path = "../std-mel", version = "=0.9.0-pre.1" }

[features]
mock = []
plugin = []
real = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
