[package]
name = "fs-mel"
version = "0.9.1"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium core filesystem interaction library"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
crate-type = ["lib", "cdylib"]
name = "fs_mel"

[dependencies]
async-std = "1.13"
async-trait = "0.1.71"
async-walkdir = "2.0"
futures = "0.3.28"
melodium-core = { path = "../../melodium-core", version = "0.9.1" }
melodium-macro = { path = "../../melodium-macro", version = "0.9.1" }
serde = "1.0.185"
std-mel = { path = "../std-mel", version = "0.9.1" }

[features]
mock = []
plugin = []
real = []

[package.metadata.docs.rs]
features = ["mock"]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "aarch64-unknown-linux-gnu",
    "aarch64-unknown-linux-musl",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "i686-unknown-linux-gnu",
    "i686-unknown-linux-musl",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "aarch64-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-gnu",
    "i686-pc-windows-msvc",
    "wasm32-unknown-unknown"
]

