[package]
name = "http-mel"
version = "0.9.0"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium HTTP library"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
crate-type = ["lib", "cdylib"]
name = "http_mel"

[dependencies]
async-std = {version="1.13", features=["unstable"]}
futures = "0.3"
melodium-core = { path = "../../melodium-core", version = "0.9.0" }
melodium-macro = { path = "../../melodium-macro", version = "0.9.0" }
std-mel = { path = "../std-mel", version = "0.9.0" }
net-mel = { path = "../net-mel", version = "0.9.0" }
serde = "1.0.185"
trillium = { version = "0.2", features = ["serde"]}
trillium-router = { version = "0.4"}
trillium-async-std = {version = "0.4", optional = true}
trillium-client = {version = "0.6"}
trillium-rustls = { version = "0.8", default-features = false, features = ["client", "ring"], optional = true }
ringbuf = "0.3"
async-ringbuf = "0.1"
routefinder = "0.5"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }

[features]
mock = []
plugin = []
real = ["trillium-async-std", "trillium-rustls"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
