[package]
name = "jaq-mel"
version = "0.7.0-rc1"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.60"
edition = "2018"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium JSON data processing `jaq` library"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
crate-type = ["lib", "cdylib"]
name = "jaq_mel"

[dependencies]
melodium-core = { path = "../../melodium-core", version = "=0.7.0-rc1" }
melodium-macro = { path = "../../melodium-macro", version = "=0.7.0-rc1" }
jaq-core = { version = "1.0.0-beta" }
jaq-interpret = { version = "1.0.0-beta" }
jaq-parse = { version = "1.0.0-beta" }
jaq-std = { version = "1.0.0-beta" }
serde_json = "1.0.105"

[features]
mock = []
plugin = []
real = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

