[package]
name = "javascript-mel"
version = "0.8.0"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.60"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium JavaScript language library"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
crate-type = ["lib", "cdylib"]
name = "javascript_mel"

[dependencies]
async-std = "1.12"
boa_engine = { version = "0.17.0" }
melodium-core = { path = "../../melodium-core", version = "0.8.0" }
melodium-macro = { path = "../../melodium-macro", version = "0.8.0" }
json-mel = { path = "../json-mel", version = "0.8.0" }
serde_json = "1.0.105"

[features]
mock = []
plugin = []
real = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

