[package]
name = "json-mel"
version = "0.9.0-pre.3"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium JSON data processing library"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
crate-type = ["lib", "cdylib"]
name = "json_mel"

[dependencies]
futures = "0.3.28"
melodium-core = { path = "../../melodium-core", version = "=0.9.0-pre.3" }
melodium-macro = { path = "../../melodium-macro", version = "=0.9.0-pre.3" }
serde = "1.0.185"
serde_json = "1.0.105"

[features]
mock = []
plugin = []
real = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

