[package]
name = "log-mel"
version = "0.9.0-pre.5"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium logging library"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
crate-type = ["lib", "cdylib"]
name = "log_mel"

[dependencies]
async-std = { version="1.13", features=["unstable"] }
chrono = { version = "0.4", default-features = false, features = ["now", "serde"] }
colored = { version = "2.0.2" }
futures = "0.3.28"
std-mel = { path = "../std-mel", version = "=0.9.0-pre.5" }
fs-mel = { path = "../fs-mel", version = "=0.9.0-pre.5" }
melodium-core = { path = "../../melodium-core", version = "=0.9.0-pre.5" }
melodium-macro = { path = "../../melodium-macro", version = "=0.9.0-pre.5" }
serde = "1.0.185"

[features]
mock = []
plugin = []
real = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
