[package]
name = "log-mel"
version = "0.9.1"
authors = ["Quentin VIGNAUD <quentin.vignaud@melodium.tech>"]
rust-version = "1.83"
edition = "2021"
license = "EUPL-1.2"
homepage = "https://melodium.tech"
repository = "https://gitlab.com/melodium/melodium"
readme = "README.md"
description = "Mélodium logging library"
keywords = ["dataflow","parallelization","scalability","async","signal"]
categories = ["compilers", "science", "concurrency", "asynchronous"]

[lib]
crate-type = ["lib", "cdylib"]
name = "log_mel"

[dependencies]
async-std = { version="1.13", features=["unstable"] }
chrono = { version = "0.4", default-features = false, features = ["now", "serde"] }
colored = { version = "2.0.2" }
futures = "0.3.28"
std-mel = { path = "../std-mel", version = "0.9.1" }
fs-mel = { path = "../fs-mel", version = "0.9.1" }
melodium-core = { path = "../../melodium-core", version = "0.9.1" }
melodium-macro = { path = "../../melodium-macro", version = "0.9.1" }
serde = "1.0.185"

[features]
mock = []
plugin = []
real = []

[package.metadata.docs.rs]
features = ["mock"]
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = [
    "aarch64-unknown-linux-gnu",
    "aarch64-unknown-linux-musl",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "i686-unknown-linux-gnu",
    "i686-unknown-linux-musl",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "aarch54-pc-windows-msvc",
    "x86_64-pc-windows-gnu",
    "x86_64-pc-windows-msvc",
    "i686-pc-windows-gnu",
    "i686-pc-windows-msvc",
    "wasm32-unknown-unknown"
]

